gramatica.output
Terminals unused in grammar

   CONST_NULL


Grammar

    0 $accept: program $end

    1 program: imports statelist
    2        | imports
    3        | statelist

    4 imports: TK_IMPORT CONST_STR delimiter moreimps

    5 moreimps: imports
    6         | %empty

    7 statelist: state morestates

    8 morestates: state morestates
    9           | %empty

   10 state: assign
   11      | conditional
   12      | loop
   13      | class
   14      | function
   15      | var
   16      | print
   17      | func_call

   18 assign: id OP_ASSIGN expresion delimiter

   19 delimiter: TK_NEWLINE
   20          | TK_SEMICOLON

   21 id: T_ID
   22   | T_ID TK_LEFTSQBRACKET CONST_INT TK_RIGHTSQBRACKET
   23   | T_CLASSNAME TK_DOT T_ID

   24 conditional: if elseif else TK_NEWLINE

   25 if: TK_IF expresion TK_NEWLINE block
   26   | TK_IF expresion block

   27 elseif: TK_ELIF TK_NEWLINE block elseif
   28       | TK_ELIF block elseif
   29       | %empty

   30 else: TK_ELSE TK_NEWLINE block
   31     | TK_ELSE block
   32     | %empty

   33 loop: for
   34     | do
   35     | while

   36 for: TK_FOR assign TK_SEMICOLON expresion TK_SEMICOLON expresion TK_NEWLINE block
   37    | TK_FOR assign TK_SEMICOLON expresion TK_SEMICOLON expresion block

   38 do: TK_DO TK_NEWLINE block TK_WHILE expresion delimiter
   39   | TK_DO block TK_WHILE expresion delimiter

   40 while: TK_WHILE expresion TK_NEWLINE block
   41      | TK_WHILE expresion block

   42 type: TPNM_BOOL
   43     | TPNM_CHAR
   44     | TPNM_SHORT
   45     | TPNM_INT
   46     | TPNM_LONG
   47     | TPNM_FLOAT
   48     | TPNM_DOUBLE
   49     | TPNM_STR
   50     | T_CLASSNAME

   51 class: TK_CLASS T_CLASSNAME TK_NEWLINE TK_LEFTBRACKET class_dec TK_RIGHTBRACKET
   52      | TK_CLASS T_CLASSNAME TK_LEFTBRACKET class_dec TK_RIGHTBRACKET

   53 class_dec: class_st class_dec
   54          | %empty

   55 class_st: accesor var
   56         | accesor function

   57 accesor: ACC_PRIVATE
   58        | ACC_PUBLIC

   59 function: TK_FUNC type T_ID TK_LEFTPAREN args TK_RIGHTPAREN TK_NEWLINE block
   60         | TK_FUNC type T_ID TK_LEFTPAREN args TK_RIGHTPAREN block
   61         | TK_FUNC T_ID TK_LEFTPAREN args TK_RIGHTPAREN TK_NEWLINE block
   62         | TK_FUNC T_ID TK_LEFTPAREN args TK_RIGHTPAREN block

   63 args: type T_ID moreargs
   64     | %empty

   65 moreargs: type T_ID moreargs
   66         | %empty

   67 func_call: T_ID TK_LEFTPAREN call_args TK_RIGHTPAREN delimiter
   68          | T_ID TK_LEFTPAREN TK_RIGHTPAREN delimiter

   69 call_args: var_const
   70          | var_const TK_COMMA call_args

   71 var: type id delimiter
   72    | type id OP_ASSIGN expresion delimiter

   73 print: TK_PRINT var_const delimiter

   74 block: TK_LEFTBRACKET statelist TK_RIGHTBRACKET
   75      | TK_LEFTBRACKET TK_RIGHTBRACKET
   76      | state

   77 var_const: boolean
   78          | CONST_CHAR
   79          | CONST_INT
   80          | CONST_FLOAT
   81          | CONST_STR
   82          | list

   83 boolean: CONST_TRUE
   84        | CONST_FALSE

   85 list: TK_LEFTSQBRACKET list_elem TK_RIGHTBRACKET delimiter
   86     | TK_LEFTSQBRACKET TK_RIGHTBRACKET delimiter

   87 list_elem: list_e
   88          | list_e TK_COMMA list_elem

   89 list_e: var_const
   90       | id

   91 expresion: exp
   92          | exp rel_op exp

   93 exp: e
   94    | e comp_op e

   95 e: term
   96  | term mult_op e

   97 term: fact
   98     | fact add_op term

   99 fact: neg_op f
  100     | f

  101 f: TK_LEFTPAREN expresion TK_RIGHTPAREN
  102  | var_const

  103 rel_op: OP_AND
  104       | OP_OR

  105 comp_op: OP_LESS
  106        | OP_MORE
  107        | OP_LESSEQ
  108        | OP_MOREEQ
  109        | OP_EQ
  110        | OP_NOTEQ

  111 mult_op: OP_MULT
  112        | OP_DIV
  113        | OP_MOD

  114 add_op: OP_ADD
  115       | OP_SUB

  116 neg_op: OP_NOT


Terminals, with rules where they appear

$end (0) 0
error (256)
CONST_NULL (258)
CONST_FALSE (259) 84
CONST_TRUE (260) 83
CONST_INT (261) 22 79
CONST_FLOAT (262) 80
CONST_STR (263) 4 81
CONST_CHAR (264) 78
TK_IF (265) 25 26
TK_ELSE (266) 30 31
TK_ELIF (267) 27 28
TK_FOR (268) 36 37
TK_DO (269) 38 39
TK_WHILE (270) 38 39 40 41
TK_FUNC (271) 59 60 61 62
TK_CLASS (272) 51 52
TK_IMPORT (273) 4
TK_PRINT (274) 73
TPNM_BOOL (275) 42
TPNM_CHAR (276) 43
TPNM_SHORT (277) 44
TPNM_INT (278) 45
TPNM_LONG (279) 46
TPNM_FLOAT (280) 47
TPNM_DOUBLE (281) 48
TPNM_STR (282) 49
ACC_PRIVATE (283) 57
ACC_PUBLIC (284) 58
OP_NOT (285) 116
OP_AND (286) 103
OP_OR (287) 104
OP_MULT (288) 111
OP_DIV (289) 112
OP_MOD (290) 113
OP_ADD (291) 114
OP_SUB (292) 115
OP_LESS (293) 105
OP_MORE (294) 106
OP_MOREEQ (295) 108
OP_LESSEQ (296) 107
OP_EQ (297) 109
OP_NOTEQ (298) 110
OP_ASSIGN (299) 18 72
TK_LEFTBRACKET (300) 51 52 74 75
TK_RIGHTBRACKET (301) 51 52 74 75 85 86
TK_LEFTPAREN (302) 59 60 61 62 67 68 101
TK_RIGHTPAREN (303) 59 60 61 62 67 68 101
TK_LEFTSQBRACKET (304) 22 85 86
TK_RIGHTSQBRACKET (305) 22
TK_COMMA (306) 70 88
TK_SEMICOLON (307) 20 36 37
TK_NEWLINE (308) 19 24 25 27 30 36 38 40 51 59 61
TK_DOT (309) 23
T_ID (310) 21 22 23 59 60 61 62 63 65 67 68
T_CLASSNAME (311) 23 50 51 52


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
program (58)
    on left: 1 2 3, on right: 0
imports (59)
    on left: 4, on right: 1 2 5
moreimps (60)
    on left: 5 6, on right: 4
statelist (61)
    on left: 7, on right: 1 3 74
morestates (62)
    on left: 8 9, on right: 7 8
state (63)
    on left: 10 11 12 13 14 15 16 17, on right: 7 8 76
assign (64)
    on left: 18, on right: 10 36 37
delimiter (65)
    on left: 19 20, on right: 4 18 38 39 67 68 71 72 73 85 86
id (66)
    on left: 21 22 23, on right: 18 71 72 90
conditional (67)
    on left: 24, on right: 11
if (68)
    on left: 25 26, on right: 24
elseif (69)
    on left: 27 28 29, on right: 24 27 28
else (70)
    on left: 30 31 32, on right: 24
loop (71)
    on left: 33 34 35, on right: 12
for (72)
    on left: 36 37, on right: 33
do (73)
    on left: 38 39, on right: 34
while (74)
    on left: 40 41, on right: 35
type (75)
    on left: 42 43 44 45 46 47 48 49 50, on right: 59 60 63 65 71 72
class (76)
    on left: 51 52, on right: 13
class_dec (77)
    on left: 53 54, on right: 51 52 53
class_st (78)
    on left: 55 56, on right: 53
accesor (79)
    on left: 57 58, on right: 55 56
function (80)
    on left: 59 60 61 62, on right: 14 56
args (81)
    on left: 63 64, on right: 59 60 61 62
moreargs (82)
    on left: 65 66, on right: 63 65
func_call (83)
    on left: 67 68, on right: 17
call_args (84)
    on left: 69 70, on right: 67 70
var (85)
    on left: 71 72, on right: 15 55
print (86)
    on left: 73, on right: 16
block (87)
    on left: 74 75 76, on right: 25 26 27 28 30 31 36 37 38 39 40 41
    59 60 61 62
var_const (88)
    on left: 77 78 79 80 81 82, on right: 69 70 73 89 102
boolean (89)
    on left: 83 84, on right: 77
list (90)
    on left: 85 86, on right: 82
list_elem (91)
    on left: 87 88, on right: 85 88
list_e (92)
    on left: 89 90, on right: 87 88
expresion (93)
    on left: 91 92, on right: 18 25 26 36 37 38 39 40 41 72 101
exp (94)
    on left: 93 94, on right: 91 92
e (95)
    on left: 95 96, on right: 93 94 96
term (96)
    on left: 97 98, on right: 95 96 98
fact (97)
    on left: 99 100, on right: 97 98
f (98)
    on left: 101 102, on right: 99 100
rel_op (99)
    on left: 103 104, on right: 92
comp_op (100)
    on left: 105 106 107 108 109 110, on right: 94
mult_op (101)
    on left: 111 112 113, on right: 96
add_op (102)
    on left: 114 115, on right: 98
neg_op (103)
    on left: 116, on right: 99


State 0

    0 $accept: . program $end

    TK_IF        shift, and go to state 1
    TK_FOR       shift, and go to state 2
    TK_DO        shift, and go to state 3
    TK_WHILE     shift, and go to state 4
    TK_FUNC      shift, and go to state 5
    TK_CLASS     shift, and go to state 6
    TK_IMPORT    shift, and go to state 7
    TK_PRINT     shift, and go to state 8
    TPNM_BOOL    shift, and go to state 9
    TPNM_CHAR    shift, and go to state 10
    TPNM_SHORT   shift, and go to state 11
    TPNM_INT     shift, and go to state 12
    TPNM_LONG    shift, and go to state 13
    TPNM_FLOAT   shift, and go to state 14
    TPNM_DOUBLE  shift, and go to state 15
    TPNM_STR     shift, and go to state 16
    T_ID         shift, and go to state 17
    T_CLASSNAME  shift, and go to state 18

    program      go to state 19
    imports      go to state 20
    statelist    go to state 21
    state        go to state 22
    assign       go to state 23
    id           go to state 24
    conditional  go to state 25
    if           go to state 26
    loop         go to state 27
    for          go to state 28
    do           go to state 29
    while        go to state 30
    type         go to state 31
    class        go to state 32
    function     go to state 33
    func_call    go to state 34
    var          go to state 35
    print        go to state 36


State 1

   25 if: TK_IF . expresion TK_NEWLINE block
   26   | TK_IF . expresion block

    CONST_FALSE       shift, and go to state 37
    CONST_TRUE        shift, and go to state 38
    CONST_INT         shift, and go to state 39
    CONST_FLOAT       shift, and go to state 40
    CONST_STR         shift, and go to state 41
    CONST_CHAR        shift, and go to state 42
    OP_NOT            shift, and go to state 43
    TK_LEFTPAREN      shift, and go to state 44
    TK_LEFTSQBRACKET  shift, and go to state 45

    var_const  go to state 46
    boolean    go to state 47
    list       go to state 48
    expresion  go to state 49
    exp        go to state 50
    e          go to state 51
    term       go to state 52
    fact       go to state 53
    f          go to state 54
    neg_op     go to state 55


State 2

   36 for: TK_FOR . assign TK_SEMICOLON expresion TK_SEMICOLON expresion TK_NEWLINE block
   37    | TK_FOR . assign TK_SEMICOLON expresion TK_SEMICOLON expresion block

    T_ID         shift, and go to state 56
    T_CLASSNAME  shift, and go to state 57

    assign  go to state 58
    id      go to state 24


State 3

   38 do: TK_DO . TK_NEWLINE block TK_WHILE expresion delimiter
   39   | TK_DO . block TK_WHILE expresion delimiter

    TK_IF           shift, and go to state 1
    TK_FOR          shift, and go to state 2
    TK_DO           shift, and go to state 3
    TK_WHILE        shift, and go to state 4
    TK_FUNC         shift, and go to state 5
    TK_CLASS        shift, and go to state 6
    TK_PRINT        shift, and go to state 8
    TPNM_BOOL       shift, and go to state 9
    TPNM_CHAR       shift, and go to state 10
    TPNM_SHORT      shift, and go to state 11
    TPNM_INT        shift, and go to state 12
    TPNM_LONG       shift, and go to state 13
    TPNM_FLOAT      shift, and go to state 14
    TPNM_DOUBLE     shift, and go to state 15
    TPNM_STR        shift, and go to state 16
    TK_LEFTBRACKET  shift, and go to state 59
    TK_NEWLINE      shift, and go to state 60
    T_ID            shift, and go to state 17
    T_CLASSNAME     shift, and go to state 18

    state        go to state 61
    assign       go to state 23
    id           go to state 24
    conditional  go to state 25
    if           go to state 26
    loop         go to state 27
    for          go to state 28
    do           go to state 29
    while        go to state 30
    type         go to state 31
    class        go to state 32
    function     go to state 33
    func_call    go to state 34
    var          go to state 35
    print        go to state 36
    block        go to state 62


State 4

   40 while: TK_WHILE . expresion TK_NEWLINE block
   41      | TK_WHILE . expresion block

    CONST_FALSE       shift, and go to state 37
    CONST_TRUE        shift, and go to state 38
    CONST_INT         shift, and go to state 39
    CONST_FLOAT       shift, and go to state 40
    CONST_STR         shift, and go to state 41
    CONST_CHAR        shift, and go to state 42
    OP_NOT            shift, and go to state 43
    TK_LEFTPAREN      shift, and go to state 44
    TK_LEFTSQBRACKET  shift, and go to state 45

    var_const  go to state 46
    boolean    go to state 47
    list       go to state 48
    expresion  go to state 63
    exp        go to state 50
    e          go to state 51
    term       go to state 52
    fact       go to state 53
    f          go to state 54
    neg_op     go to state 55


State 5

   59 function: TK_FUNC . type T_ID TK_LEFTPAREN args TK_RIGHTPAREN TK_NEWLINE block
   60         | TK_FUNC . type T_ID TK_LEFTPAREN args TK_RIGHTPAREN block
   61         | TK_FUNC . T_ID TK_LEFTPAREN args TK_RIGHTPAREN TK_NEWLINE block
   62         | TK_FUNC . T_ID TK_LEFTPAREN args TK_RIGHTPAREN block

    TPNM_BOOL    shift, and go to state 9
    TPNM_CHAR    shift, and go to state 10
    TPNM_SHORT   shift, and go to state 11
    TPNM_INT     shift, and go to state 12
    TPNM_LONG    shift, and go to state 13
    TPNM_FLOAT   shift, and go to state 14
    TPNM_DOUBLE  shift, and go to state 15
    TPNM_STR     shift, and go to state 16
    T_ID         shift, and go to state 64
    T_CLASSNAME  shift, and go to state 65

    type  go to state 66


State 6

   51 class: TK_CLASS . T_CLASSNAME TK_NEWLINE TK_LEFTBRACKET class_dec TK_RIGHTBRACKET
   52      | TK_CLASS . T_CLASSNAME TK_LEFTBRACKET class_dec TK_RIGHTBRACKET

    T_CLASSNAME  shift, and go to state 67


State 7

    4 imports: TK_IMPORT . CONST_STR delimiter moreimps

    CONST_STR  shift, and go to state 68


State 8

   73 print: TK_PRINT . var_const delimiter

    CONST_FALSE       shift, and go to state 37
    CONST_TRUE        shift, and go to state 38
    CONST_INT         shift, and go to state 39
    CONST_FLOAT       shift, and go to state 40
    CONST_STR         shift, and go to state 41
    CONST_CHAR        shift, and go to state 42
    TK_LEFTSQBRACKET  shift, and go to state 45

    var_const  go to state 69
    boolean    go to state 47
    list       go to state 48


State 9

   42 type: TPNM_BOOL .

    $default  reduce using rule 42 (type)


State 10

   43 type: TPNM_CHAR .

    $default  reduce using rule 43 (type)


State 11

   44 type: TPNM_SHORT .

    $default  reduce using rule 44 (type)


State 12

   45 type: TPNM_INT .

    $default  reduce using rule 45 (type)


State 13

   46 type: TPNM_LONG .

    $default  reduce using rule 46 (type)


State 14

   47 type: TPNM_FLOAT .

    $default  reduce using rule 47 (type)


State 15

   48 type: TPNM_DOUBLE .

    $default  reduce using rule 48 (type)


State 16

   49 type: TPNM_STR .

    $default  reduce using rule 49 (type)


State 17

   21 id: T_ID .
   22   | T_ID . TK_LEFTSQBRACKET CONST_INT TK_RIGHTSQBRACKET
   67 func_call: T_ID . TK_LEFTPAREN call_args TK_RIGHTPAREN delimiter
   68          | T_ID . TK_LEFTPAREN TK_RIGHTPAREN delimiter

    TK_LEFTPAREN      shift, and go to state 70
    TK_LEFTSQBRACKET  shift, and go to state 71

    $default  reduce using rule 21 (id)


State 18

   23 id: T_CLASSNAME . TK_DOT T_ID
   50 type: T_CLASSNAME .

    TK_DOT  shift, and go to state 72

    $default  reduce using rule 50 (type)


State 19

    0 $accept: program . $end

    $end  shift, and go to state 73


State 20

    1 program: imports . statelist
    2        | imports .

    TK_IF        shift, and go to state 1
    TK_FOR       shift, and go to state 2
    TK_DO        shift, and go to state 3
    TK_WHILE     shift, and go to state 4
    TK_FUNC      shift, and go to state 5
    TK_CLASS     shift, and go to state 6
    TK_PRINT     shift, and go to state 8
    TPNM_BOOL    shift, and go to state 9
    TPNM_CHAR    shift, and go to state 10
    TPNM_SHORT   shift, and go to state 11
    TPNM_INT     shift, and go to state 12
    TPNM_LONG    shift, and go to state 13
    TPNM_FLOAT   shift, and go to state 14
    TPNM_DOUBLE  shift, and go to state 15
    TPNM_STR     shift, and go to state 16
    T_ID         shift, and go to state 17
    T_CLASSNAME  shift, and go to state 18

    $default  reduce using rule 2 (program)

    statelist    go to state 74
    state        go to state 22
    assign       go to state 23
    id           go to state 24
    conditional  go to state 25
    if           go to state 26
    loop         go to state 27
    for          go to state 28
    do           go to state 29
    while        go to state 30
    type         go to state 31
    class        go to state 32
    function     go to state 33
    func_call    go to state 34
    var          go to state 35
    print        go to state 36


State 21

    3 program: statelist .

    $default  reduce using rule 3 (program)


State 22

    7 statelist: state . morestates

    TK_IF        shift, and go to state 1
    TK_FOR       shift, and go to state 2
    TK_DO        shift, and go to state 3
    TK_WHILE     shift, and go to state 4
    TK_FUNC      shift, and go to state 5
    TK_CLASS     shift, and go to state 6
    TK_PRINT     shift, and go to state 8
    TPNM_BOOL    shift, and go to state 9
    TPNM_CHAR    shift, and go to state 10
    TPNM_SHORT   shift, and go to state 11
    TPNM_INT     shift, and go to state 12
    TPNM_LONG    shift, and go to state 13
    TPNM_FLOAT   shift, and go to state 14
    TPNM_DOUBLE  shift, and go to state 15
    TPNM_STR     shift, and go to state 16
    T_ID         shift, and go to state 17
    T_CLASSNAME  shift, and go to state 18

    $default  reduce using rule 9 (morestates)

    morestates   go to state 75
    state        go to state 76
    assign       go to state 23
    id           go to state 24
    conditional  go to state 25
    if           go to state 26
    loop         go to state 27
    for          go to state 28
    do           go to state 29
    while        go to state 30
    type         go to state 31
    class        go to state 32
    function     go to state 33
    func_call    go to state 34
    var          go to state 35
    print        go to state 36


State 23

   10 state: assign .

    $default  reduce using rule 10 (state)


State 24

   18 assign: id . OP_ASSIGN expresion delimiter

    OP_ASSIGN  shift, and go to state 77


State 25

   11 state: conditional .

    $default  reduce using rule 11 (state)


State 26

   24 conditional: if . elseif else TK_NEWLINE

    TK_ELIF  shift, and go to state 78

    $default  reduce using rule 29 (elseif)

    elseif  go to state 79


State 27

   12 state: loop .

    $default  reduce using rule 12 (state)


State 28

   33 loop: for .

    $default  reduce using rule 33 (loop)


State 29

   34 loop: do .

    $default  reduce using rule 34 (loop)


State 30

   35 loop: while .

    $default  reduce using rule 35 (loop)


State 31

   71 var: type . id delimiter
   72    | type . id OP_ASSIGN expresion delimiter

    T_ID         shift, and go to state 56
    T_CLASSNAME  shift, and go to state 57

    id  go to state 80


State 32

   13 state: class .

    $default  reduce using rule 13 (state)


State 33

   14 state: function .

    $default  reduce using rule 14 (state)


State 34

   17 state: func_call .

    $default  reduce using rule 17 (state)


State 35

   15 state: var .

    $default  reduce using rule 15 (state)


State 36

   16 state: print .

    $default  reduce using rule 16 (state)


State 37

   84 boolean: CONST_FALSE .

    $default  reduce using rule 84 (boolean)


State 38

   83 boolean: CONST_TRUE .

    $default  reduce using rule 83 (boolean)


State 39

   79 var_const: CONST_INT .

    $default  reduce using rule 79 (var_const)


State 40

   80 var_const: CONST_FLOAT .

    $default  reduce using rule 80 (var_const)


State 41

   81 var_const: CONST_STR .

    $default  reduce using rule 81 (var_const)


State 42

   78 var_const: CONST_CHAR .

    $default  reduce using rule 78 (var_const)


State 43

  116 neg_op: OP_NOT .

    $default  reduce using rule 116 (neg_op)


State 44

  101 f: TK_LEFTPAREN . expresion TK_RIGHTPAREN

    CONST_FALSE       shift, and go to state 37
    CONST_TRUE        shift, and go to state 38
    CONST_INT         shift, and go to state 39
    CONST_FLOAT       shift, and go to state 40
    CONST_STR         shift, and go to state 41
    CONST_CHAR        shift, and go to state 42
    OP_NOT            shift, and go to state 43
    TK_LEFTPAREN      shift, and go to state 44
    TK_LEFTSQBRACKET  shift, and go to state 45

    var_const  go to state 46
    boolean    go to state 47
    list       go to state 48
    expresion  go to state 81
    exp        go to state 50
    e          go to state 51
    term       go to state 52
    fact       go to state 53
    f          go to state 54
    neg_op     go to state 55


State 45

   85 list: TK_LEFTSQBRACKET . list_elem TK_RIGHTBRACKET delimiter
   86     | TK_LEFTSQBRACKET . TK_RIGHTBRACKET delimiter

    CONST_FALSE       shift, and go to state 37
    CONST_TRUE        shift, and go to state 38
    CONST_INT         shift, and go to state 39
    CONST_FLOAT       shift, and go to state 40
    CONST_STR         shift, and go to state 41
    CONST_CHAR        shift, and go to state 42
    TK_RIGHTBRACKET   shift, and go to state 82
    TK_LEFTSQBRACKET  shift, and go to state 45
    T_ID              shift, and go to state 56
    T_CLASSNAME       shift, and go to state 57

    id         go to state 83
    var_const  go to state 84
    boolean    go to state 47
    list       go to state 48
    list_elem  go to state 85
    list_e     go to state 86


State 46

  102 f: var_const .

    $default  reduce using rule 102 (f)


State 47

   77 var_const: boolean .

    $default  reduce using rule 77 (var_const)


State 48

   82 var_const: list .

    $default  reduce using rule 82 (var_const)


State 49

   25 if: TK_IF expresion . TK_NEWLINE block
   26   | TK_IF expresion . block
